# poc-machine-law

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.md  .pre-commit-config.yaml  .tool-versions  2  CHANGELOG.md  CLAUDE.md  DATA_MINIMISATION_ANALYSIS_REPORT.md  DATA_MINIMIZATION_README.md  DEMO_MODE.md  Dockerfile  INTEGRATION_TESTS_SUMMARY.md  KIESWET_CONVERSION_GUIDE.md  KIESWET_TESTING_NOTES.md  MULTI_PROVIDER_ANALYSIS.md  Makefile  NEXT_STEPS.md  README.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  TEST_RESULTS.md  WPM_IMPLEMENTATION_STATUS.md  analyse.py  analyze_labeling_results.py  apply_sensitivity_labels.py  behave.ini  benchmark_feel.py  comparison_zorgtoeslag_2024_2025.md  debug_execute_law.py  dev.Dockerfile  dmn_hierarchy.md  docker-compose.yaml  go.work  go.work.sum  gopy_machine.c  labeling_report.json  law  law_fields_labeled.csv  (+26 more)
importer/backend/: README.md  main.py  pyproject.toml
law_mcp/web-demo/: README.md  index.html  main.py  pyproject.toml
web/engines/http_engine/machine_client/: README.md  pyproject.toml
web/engines/http_engine/machine_client/law_as_code_client/models/: __init__.py  case.py  claim.py  claim_submit.py  evaluate.py  evaluate_input.py  evaluate_response_200.py  evaluate_response_201.py  get_cases_bsn_service_law_response_200.py  law.py  response_evaluate_schema.py  response_evaluate_schema_input.py  service.py
web/engines/http_engine/machine_client/regel_recht_engine_api_client/: __init__.py  types.py
web/engines/http_engine/machine_client/regel_recht_engine_api_client/models/: action.py  base_field.py  case.py  case_appeal_status.py  case_based_on_bsn_service_law_response_404.py  case_status.py  (+29 more)
(+1128 files in other folders)
