[project]
name = "machine-law-importer"
version = "0.1.0"
description = "Helps to convert existing laws to machine readable YAML."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.45.2",
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.8",
    "ipython>=8.32.0",
    "jsonschema>=4.23.0",
    "langchain-anthropic>=0.3.5",
    "langchain-community>=0.3.16",
    "langgraph>=0.2.70",
    "nest-asyncio>=1.6.0",
    "tavily-python>=0.5.0",
    "uvicorn>=0.34.0",
    "websockets>=14.2",
]
