[project]
name = "machine-law-importer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "fastmcp>=2.12.3",
    "langchain-anthropic>=0.3.5",
    "langgraph>=0.2.70",
    "nest-asyncio>=1.6.0",
    "uvicorn[standard]>=0.20.0",
]
